styles/base.css
@import url("https://fonts.googleapis.com/css?family=Scada");

body {
  font-family: "SCADA";
  text-align: center;
}

header {
  display: inline-block;
  text-align: center;
  background-color: lightslategray;
  width: 100%;
}

header > img {
  border-radius: 25%;
  margin-block: 30px;
  margin-right: 30px;
}

header > h1 {
  text-shadow: 2px 2px 2px darkgrey;
  font-size: 42px;
}

.inline {
  display: inline-block;
  vertical-align: middle;
}

nav {
  display: inline-block;
  background-color: black;
  width: 100%;
}

.navlink {
  color: whitesmoke;
  font-size: 24px;
  font-variant: small-caps;
  text-decoration: none;
  padding: 20px;
}

main {
  width: 90%;
  margin: 0 auto;
}

.card {
  border: 1px solid lightgrey;
  border-radius: 5px;
  margin: 10px;
  display: grid;
}

.card > h3 {
  background-color: lightgray;
  width: 100%;
  height: 100%;
  margin: 0%;
  padding-top: 10px;
}

li {
  list-style: none;
}

footer {
  display: inline-block;
  text-align: center;
  background-color: lightslategray;
  width: 100%;
}

#lastModified {
  color: 998877;
}

